// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for <Vote /> should render and save the snapshot correctly default state 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi jJJlOR"
  >
    <img
      alt=""
      src="thumbs-up.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`Tests for <Vote /> should render and save the snapshot correctly marked state 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi jQxoBS"
  >
    <img
      alt=""
      src="thumbs-down.svg"
    />
  </div>
</DocumentFragment>
`;
